// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store/reducer should handle FETCH_SUCCESS 1`] = `
Object {
  "current": "f20811144fa-2bf33c-11e5555557-932553252a-b2970b72321c7b36",
  "loading": false,
  "payload": Object {
    "items": 4,
    "payload": Array [
      Object {
        "id": "f20811144fa-2bf33c-11e5555557-932553252a-b2970b72321c7b36",
        "title": "Canceled",
      },
      Object {
        "id": "f234235252352bfc-11233333333e7-a902352327-b2970b7c7222b36",
        "title": "Denied",
      },
      Object {
        "id": "f20863255236c4-2b235235fc-11e3255557-aa20-b2970b3257c7b36",
        "title": "Delayed",
      },
      Object {
        "id": "f20863255236c4-11e5555557-a902352327-aa20-b2970b3257c7b36",
        "title": "Success",
      },
    ],
    "totalItems": 4,
  },
}
`;

exports[`store/reducer should handle SELECT_OPTION 1`] = `
Object {
  "current": "mockId",
  "loading": false,
  "payload": null,
}
`;

exports[`store/reducer should return initial state when no action is passed 1`] = `
Object {
  "current": "f20811144fa-2bf33c-11e5555557-932553252a-b2970b72321c7b36",
  "loading": false,
  "payload": null,
}
`;
